examples/canary-analysis/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-stable
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /color
            pathType: Exact
            backend:
              service:
                name: canary-demo-stable
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-demo-stable
                port: 
                  number: 80
